# LinkedList-GarbageCollector

./: .gitignore  CMakeLists.txt  Classes.h  Collector.cpp  Collector.h  GUI.cpp  List.cpp  List.h  Node.cpp  Node.h  README.md  main.cpp  program
libs/wxWidgets-3.1.4/gtk-build/: Makefile  config.status
libs/wxWidgets-3.1.4/gtk-build/demos/bombs/: Makefile
libs/wxWidgets-3.1.4/gtk-build/demos/forty/: Makefile
libs/wxWidgets-3.1.4/gtk-build/demos/fractal/: Makefile
libs/wxWidgets-3.1.4/gtk-build/demos/life/: Makefile
libs/wxWidgets-3.1.4/gtk-build/demos/poem/: Makefile
libs/wxWidgets-3.1.4/gtk-build/lib/: libwx_baseu-3.1.so.4  libwx_baseu-3.1.so.4.0.0  libwx_baseu_net-3.1.so.4  libwx_baseu_net-3.1.so.4.0.0
libs/wxWidgets-3.1.4/gtk-build/samples/animate/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/archive/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/artprov/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/aui/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/calendar/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/caret/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/clipboard/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/collpane/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/combo/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/config/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/console/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/dataview/: Makefile
libs/wxWidgets-3.1.4/gtk-build/samples/debugrpt/: Makefile
libs/wxWidgets-3.1.4/gtk-build/tests/: Makefile
(+108 files in other folders)
